--- a/package.json
+++ b/package.json
@@ -37,41 +37,27 @@
         "@rollup/plugin-commonjs": "^11.0.2",
         "@rollup/plugin-json": "^4.0.2",
         "@rollup/plugin-node-resolve": "^7.1.1",
+        "@types/estree": "^0.0.42",
         "@types/lodash": "^4.14.149",
         "@types/node": "^13.9.0",
         "@types/rollup-plugin-postcss": "^2.0.0",
-        "babel-plugin-htm": "^3.0.0",
-        "csstype": "^2.6.9",
-        "event-target-shim": "^5.0.1",
-        "htm": "^3.0.3",
-        "live-server": "^1.2.1",
-        "lodash": "^4.17.15",
-        "object-hash": "^2.0.3",
-        "prettier": "^1.19.1",
-        "rollup": "^2.0.0",
-        "rollup-plugin-babel": "^4.3.3",
-        "rollup-plugin-postcss": "^2.2.0",
-        "rollup-plugin-sourcemaps": "^0.5.0",
-        "rollup-plugin-terser": "^5.2.0",
-        "rollup-plugin-ts": "^1.2.14",
-        "serialize-javascript": "^3.0.0",
-        "terser": "^4.6.6",
-        "tslib": "^1.11.1",
-        "typescript": "^3.8.3",
-        "@types/estree": "^0.0.42",
         "ansi-regex": "^5.0.0",
         "ansi-styles": "^4.2.1",
+        "babel-plugin-htm": "^3.0.0",
         "chalk": "^3.0.0",
         "color-convert": "^2.0.1",
         "color-name": "^1.1.4",
+        "csstype": "^2.6.9",
         "debug": "^4.1.1",
         "define-property": "^2.0.2",
         "domelementtype": "^2.0.1",
         "estree-walker": "^2.0.1",
+        "event-target-shim": "^5.0.1",
         "extend-shallow": "^3.0.2",
         "has-flag": "^4.0.0",
         "has-value": "^2.0.2",
         "has-values": "^2.0.1",
+        "htm": "^3.0.3",
         "http-errors": "^1.7.3",
         "inherits": "^2.0.4",
         "is-accessor-descriptor": "^3.0.1",
@@ -85,19 +71,33 @@
         "jsesc": "^2.5.2",
         "json5": "^2.1.1",
         "kind-of": "^6.0.3",
+        "live-server": "^1.2.1",
+        "lodash": "^4.17.15",
         "minimist": "^1.2.0",
         "ms": "^2.1.2",
         "normalize-path": "^3.0.0",
+        "object-hash": "^2.0.3",
         "postcss": "^7.0.27",
         "postcss-selector-parser": "^6.0.2",
         "postcss-value-parser": "^4.0.3",
+        "prettier": "^1.19.1",
+        "rollup": "^2.0.0",
+        "rollup-plugin-babel": "^5.0.0-alpha.1",
+        "rollup-plugin-postcss": "^2.2.0",
+        "rollup-plugin-sourcemaps": "^0.5.0",
+        "rollup-plugin-terser": "^5.2.0",
+        "rollup-plugin-ts": "^1.2.14",
         "safe-buffer": "^5.2.0",
         "semver": "^7.1.3",
+        "serialize-javascript": "^3.0.0",
         "setprototypeof": "^1.2.0",
         "source-map": "^0.7.3",
         "string-width": "^4.2.0",
         "strip-ansi": "^6.0.0",
-        "supports-color": "^7.1.0"
+        "supports-color": "^7.1.0",
+        "terser": "^4.6.6",
+        "tslib": "^1.11.1",
+        "typescript": "^3.8.3"
     },
     "resolutions": {}
 }
