--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "jsxFactory": "h",
-        "useDefineForClassFields": true,
+        "useDefineForClassFields": false,
         "plugins": [],
         "allowJs": true,
         "paths": {
