--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "typings": "./dist/index.d.ts",
     "type": "module",
-    "version": "1.8.3",
+    "version": "1.8.4",
     "main": "./dist/index.min.js",
     "module": "./dist/index.min.js",
     "publishConfig": {
@@ -26,49 +26,47 @@
         "url": "https://github.com/masx200/mvvm-reactive-view/issues"
     },
     "homepage": "https://github.com/masx200/mvvm-reactive-view#readme",
-    "dependencies": {},
     "devDependencies": {
-        "is-svg":"4.2.2",
-        "@babel/compat-data": "^7.9.0",
-        "@babel/core": "^7.9.0",
-        "@babel/plugin-proposal-class-properties": "^7.8.3",
-        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
+        "@babel/compat-data": "^7.13.11",
+        "@babel/core": "^7.13.10",
+        "@babel/plugin-proposal-class-properties": "^7.13.0",
+        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.13.8",
         "@babel/plugin-syntax-nullish-coalescing-operator": "^7.8.3",
-        "@babel/plugin-transform-react-jsx": "^7.9.4",
-        "@babel/plugin-transform-typescript": "^7.9.4",
-        "@babel/preset-env": "^7.9.5",
-        "@babel/preset-typescript": "^7.9.0",
+        "@babel/plugin-transform-react-jsx": "^7.12.17",
+        "@babel/plugin-transform-typescript": "^7.13.0",
+        "@babel/preset-env": "^7.13.10",
+        "@babel/preset-typescript": "^7.13.0",
         "@masx200/deep-observe-agent-proxy": "^1.2.1",
-        "@masx200/dom-element-attribute-agent-proxy": "^1.3.1",
-        "@microsoft/api-extractor": "^7.7.13",
-        "@rollup/plugin-commonjs": "^11.0.2",
-        "@rollup/plugin-json": "^4.0.2",
-        "@rollup/plugin-node-resolve": "^7.1.1",
-        "@rollup/plugin-replace": "^2.3.1",
-        "@rollup/plugin-typescript": "^4.0.0",
-        "@types/estree": "^0.0.42",
-        "@types/lodash": "^4.14.149",
-        "@types/node": "^13.9.0",
-        "@types/rollup-plugin-postcss": "^2.0.0",
-        "acorn-jsx": "^5.2.0",
+        "@masx200/dom-element-attribute-agent-proxy": "^1.3.2",
+        "@microsoft/api-extractor": "^7.13.2",
+        "@rollup/plugin-commonjs": "^17.1.0",
+        "@rollup/plugin-json": "^4.1.0",
+        "@rollup/plugin-node-resolve": "^11.2.0",
+        "@rollup/plugin-replace": "^2.4.1",
+        "@rollup/plugin-typescript": "^8.2.0",
+        "@types/estree": "^0.0.46",
+        "@types/lodash": "^4.14.168",
+        "@types/node": "^14.14.35",
+        "@types/rollup-plugin-postcss": "^2.0.1",
+        "acorn-jsx": "^5.3.1",
         "ansi-regex": "^5.0.0",
-        "ansi-styles": "^4.2.1",
+        "ansi-styles": "^5.1.0",
         "babel-plugin-htm": "^3.0.0",
-        "chalk": "^3.0.0",
+        "chalk": "^4.1.0",
         "color-convert": "^2.0.1",
         "color-name": "^1.1.4",
-        "csstype": "^2.6.10",
-        "debug": "^4.1.1",
+        "csstype": "^3.0.7",
+        "debug": "^4.3.1",
         "define-property": "^2.0.2",
-        "domelementtype": "^2.0.1",
-        "estree-walker": "^2.0.1",
-        "event-target-shim": "^5.0.1",
+        "domelementtype": "^2.1.0",
+        "estree-walker": "^3.0.0",
+        "event-target-shim": "^6.0.2",
         "extend-shallow": "^3.0.2",
         "has-flag": "^4.0.0",
         "has-value": "^2.0.2",
         "has-values": "^2.0.1",
-        "htm": "^3.0.3",
-        "http-errors": "^1.7.3",
+        "htm": "^3.0.4",
+        "http-errors": "^1.8.0",
         "inherits": "^2.0.4",
         "is-accessor-descriptor": "^3.0.1",
         "is-arrayish": "^0.3.2",
@@ -77,38 +75,39 @@
         "is-extendable": "^1.0.1",
         "is-fullwidth-code-point": "^3.0.0",
         "is-glob": "^4.0.1",
+        "is-svg": "4.3.1",
         "isobject": "^4.0.0",
-        "jsesc": "^2.5.2",
-        "json5": "^2.1.1",
+        "jsesc": "^3.0.2",
+        "json5": "^2.2.0",
         "kind-of": "^6.0.3",
         "live-server": "^1.2.1",
-        "lodash": "^4.17.19",
+        "lodash": "^4.17.21",
         "minimist": "^1.2.5",
-        "ms": "^2.1.2",
+        "ms": "^2.1.3",
         "normalize-path": "^3.0.0",
-        "object-hash": "^2.0.3",
-        "postcss": "^7.0.27",
-        "postcss-selector-parser": "^6.0.2",
-        "postcss-value-parser": "^4.0.3",
-        "prettier": "^1.19.1",
-        "rollup": "^2.6.1",
-        "rollup-plugin-babel": "^5.0.0-alpha.2",
-        "rollup-plugin-postcss": "^2.3.0",
-        "rollup-plugin-sourcemaps": "^0.5.0",
+        "object-hash": "^2.1.1",
+        "postcss": "^8.2.8",
+        "postcss-selector-parser": "^6.0.4",
+        "postcss-value-parser": "^4.1.0",
+        "prettier": "^2.2.1",
+        "rollup": "^2.42.2",
+        "rollup-plugin-babel": "^4.4.0",
+        "rollup-plugin-postcss": "^4.0.0",
+        "rollup-plugin-sourcemaps": "^0.6.3",
         "rollup-plugin-string": "^3.0.0",
-        "rollup-plugin-terser": "^5.2.0",
-        "rollup-plugin-ts": "^1.2.14",
-        "safe-buffer": "^5.2.0",
-        "semver": "^7.1.3",
-        "serialize-javascript": "^4.0.0",
+        "rollup-plugin-terser": "^7.0.2",
+        "rollup-plugin-ts": "^1.3.10",
+        "safe-buffer": "^5.2.1",
+        "semver": "^7.3.4",
+        "serialize-javascript": "^5.0.1",
         "setprototypeof": "^1.2.0",
         "source-map": "^0.7.3",
-        "string-width": "^4.2.0",
+        "string-width": "^4.2.2",
         "strip-ansi": "^6.0.0",
-        "supports-color": "^7.1.0",
-        "terser": "^4.6.6",
-        "tslib": "^1.11.1",
-        "typescript": "^3.8.3"
+        "supports-color": "^8.1.1",
+        "terser": "^5.6.1",
+        "tslib": "^2.1.0",
+        "typescript": "^4.2.3"
     },
     "resolutions": {}
 }
